--- a/tasks/templates/tasks/index.html
+++ b/tasks/templates/tasks/index.html
@@ -5,6 +5,14 @@
     <title>Title</title>
 </head>
 <body>
-
+    {% if tasks %}
+        <ul>
+        {% for task in tasks %}
+            <li><a href="/polls/{{ task.id }}/">{{ task.description[:16] }}</a></li>
+        {% endfor %}
+        </ul>
+    {% else %}
+        <p>No tasks are available.</p>
+    {% endif %}
 </body>
 </html>
