--- a/tasks/templates/tasks/index.html
+++ b/tasks/templates/tasks/index.html
@@ -9,7 +9,7 @@
     {% if tasks %}
         <ul>
         {% for task in tasks %}
-            <li><a href="/polls/{{ task.id }}/">{{ task.description }}</a></li>
+            <li><a href="/tasks/{{ task.id }}/">{{ task.description }}</a></li>
         {% endfor %}
         </ul>
     {% else %}
